--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,9 @@ server:
 #指定Mybatis的Mapper文件
 mybatis:
   mapper-locations: classpath:mapper/*.xml
+    #开启驼峰命名转换
+  configuration:
+    map-underscore-to-camel-case: true
   #打印sql语句
 #  configuration:
 #    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
