--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,14 @@
             <artifactId>velocity</artifactId>
             <version>1.7</version>
         </dependency>
+        <!--jwt-->
+        <!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.10.3</version>
+        </dependency>
+
 
         <dependency>
             <groupId>cn.hutool</groupId>
