--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
             <version>2.11.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
+
 
         <dependency>
             <groupId>cn.hutool</groupId>
